<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeActivity"
    android:paddingVertical="20dp"
    android:background="@drawable/background_home">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_profile"
            android:scaleType="centerInside" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintBottom_toTopOf="@+id/layout_feat">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingHorizontal="10dp"
            android:text="@string/hello_mico"
            android:textSize="30sp"
            android:fontFamily="@font/poppins_semibold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_feat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_rectangle_white"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toTopOf="@id/layout_hello"
        app:layout_constraintBottom_toTopOf="@+id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/bt_appointment"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="0.25"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_appointment"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="0.25"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_pay"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="0.25"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_prescription"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="0.25"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_history"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/appointment_button"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/pay_button"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/prescriptions_button"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/history_button"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="0.25"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_faqs"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="0.25"
                android:paddingVertical="5dp"
                android:src="@drawable/ic_others"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/faqs_button"
                android:fontFamily="@font/poppins"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center"
                android:text="@string/others_button"
                android:fontFamily="@font/poppins"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@+id/layout_feat"
        app:layout_constraintBottom_toTopOf="@+id/layout_mica"/>

    <LinearLayout
        android:id="@+id/layout_mica"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_hello"
        app:layout_constraintBottom_toTopOf="@id/bt_chat"
        android:background="@drawable/rounded_rectangle"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medical_illness_consultation_assistant"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/poppins"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="1"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mica"
                android:layout_gravity="start"
                android:scaleType="centerInside"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/how_are_you_feeling"
                android:background="@drawable/rounded_rectangle_white"
                android:src="@drawable/rounded_rectangle_white"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:layout_weight="0.7"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginHorizontal="20dp"
        android:id="@+id/bt_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat_button"
        android:gravity="center"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>