<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ClinicActivity"
    android:layout_margin="20dp">

    <LinearLayout
        android:id="@+id/layout_clinic_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:text="@string/back_button"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tv_mica"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/clinics_header"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="24sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_clinics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="20"
        app:layout_constraintTop_toBottomOf="@+id/layout_clinic_header"/>

    <Button
        android:id="@+id/bt_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/book_button"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/rounded_rectangle" />
</androidx.constraintlayout.widget.ConstraintLayout>